# vision-desktop-automation

./: .gitignore  README.md  pyproject.toml
src/desktop_grounding/: config.py  logging_config.py  main.py
src/desktop_grounding/api/: posts_client.py
src/desktop_grounding/automation/: input_controller.py  notepad_controller.py  window_manager.py
src/desktop_grounding/utils/: paths.py  retry.py
src/desktop_grounding/vision/: annotation.py  gemini_grounding.py  grounding.py  ocr_matching.py  screenshot.py  template_matching.py
