[project]
name = "vision-desktop-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "mss>=10.2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pywin32>=311",
    "requests>=2.34.0",
    "rich>=15.0.0",
]
