[project]
name = "vision-desktop-automation"
version = "0.1.0"
description = "Vision-based desktop automation system for dynamic icon grounding on Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "google-genai>=2.2.0",
    "mss>=10.2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pywin32>=311",
    "requests>=2.34.0",
    "rich>=15.0.0",
]
